--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,9 +5,11 @@ spring.datasource.username=postgres
 spring.datasource.password=%/XykJ|&WL4f5@4d-2
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 server.port=8080
 
 logging.level.root=INFO
+
+spring.profiles.active= dev
