--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,5 +11,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 server.port=8080
 
 logging.level.root=INFO
+logging.level.org.springframework.web.socket= DEBUG
 
 spring.profiles.active= dev
