--- a/all.yml
+++ b/all.yml
@@ -89,6 +89,7 @@ spec:
               value: "%/XykJ|&WL4f5@4d-2"
             - name: SPRING_JPA_HIBERNATE_DDL_AUTO
               value: "update"
+
 ---
 apiVersion: v1
 kind: Service
@@ -100,6 +101,28 @@ spec:
   ports:
     - port: 8080
       targetPort: 8080
+  type: ClusterIP
+
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: backend-ingress
+spec:
+  ingressClassName: nginx
+  rules:
+    - host: backend.localhost
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: backend
+                port:
+                  number: 8080
+
+
 
 # ==============================================
 # Frontend (NGINX + Ingress)
@@ -125,6 +148,11 @@ spec:
           imagePullPolicy: Never
           ports:
             - containerPort: 80
+          env:
+            - name: VITE_API_BASE_URL
+              value: "http://backend.localhost/api"
+            - name: VITE_SOCKET_BASE_URL
+              value: "ws://backend.localhost"
 ---
 apiVersion: v1
 kind: Service
