--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,10 +25,14 @@ services:
       - db
 
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend
+      args:
+          VITE_API_BASE_URL: http://localhost:8080/api
+          VITE_SOCKET_BASE_URL: ws://localhost:8080
     container_name: frontend
     ports:
-      - "5173:80"
+      - "5202:80"
     depends_on:
       - backend
 
