--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,6 +6,12 @@ RUN npm ci
 COPY . .
 RUN npm run build
 
+ARG VITE_API_BASE_URL
+ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
+
+ARG VITE_SOCKET_BASE_URL
+ENV VITE_SOCKET_BASE_URL=$VITE_SOCKET_BASE_URL
+
 # Serve stage
 FROM nginx:alpine
 COPY --from=builder /app/dist /usr/share/nginx/html
