--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,14 @@
     "tailwind:init": "tailwindcss init -p"
   },
   "dependencies": {
+    "d3": "^7.9.0",
     "emoji-picker-react": "^4.15.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
     "react-social-icons": "^6.25.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "recharts": "^3.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
